--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
 
-    <a href="http://neverendingcycle.net/" style = "font-family:georgia,garamond,serif;font-size:15px;" class="navbar-brand" id="logo"><img src="../imgs/NEC_logo_crop.png" width = 150px alt="homepage"></a>
+    <a href="/" style = "font-family:georgia,garamond,serif;font-size:15px;" class="navbar-brand" id="logo"><img src="../imgs/NEC_logo_crop.png" width = 150px alt="homepage"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
